# AstroBox-NG-Plugin-AndroidWidgets

./: .gitignore  Cargo.toml
android/: build.gradle.kts  proguard-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/: AndroidWidgetsPlugin.kt  AstroBoxCompactWidgetReceiver.kt  AstroBoxMiniWidgetReceiver.kt  AstroBoxPanelWidgetReceiver.kt  AstroBoxUnifiedWidgetReceiver.kt  AstroBoxWidgetModels.kt  AstroBoxWidgetStore.kt  AstroBoxWidgetUpdater.kt
android/src/main/res/drawable/: bg_card_center.xml  bg_card_default.xml  card_background_accent.xml  card_background_normal.xml  card_icon_chip_background.xml  ic_widget_battery.xml  ic_widget_battery_0.xml  ic_widget_battery_10.xml  ic_widget_battery_20.xml  ic_widget_battery_25.xml  ic_widget_battery_75.xml  ic_widget_battery_90.xml  ic_widget_battery_charging.xml  ic_widget_battery_full.xml  ic_widget_device_band.xml  ic_widget_device_bandpro.xml  ic_widget_device_redmiwatch.xml  ic_widget_device_round.xml  ic_widget_device_watchs.xml  ic_widget_watchface.xml  rainbow_progress.xml  status_dot_disconnected.xml  widget_background.xml
android/src/main/res/layout/: widget_compact.xml  widget_loading.xml  widget_mini.xml  widget_panel.xml
android/src/main/res/values/: colors.xml  strings.xml
android/src/main/res/values-zh-rCN/: strings.xml
android/src/main/res/xml/: astrobox_compact_widget_info.xml  astrobox_mini_widget_info.xml  astrobox_panel_widget_info.xml  astrobox_unified_widget_info.xml
src/: lib.rs  mobile.rs
(+2 files in other folders)
